--- a/hadoop1/pom.xml
+++ b/hadoop1/pom.xml
@@ -62,7 +62,18 @@
             <artifactId>hbase-common</artifactId>
             <version>1.3.1</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.hbase</groupId>-->
+            <!--<artifactId>hbase-mareduce</artifactId>-->
+            <!--<version></version>-->
+        <!--</dependency>-->
 
+        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-server -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-server</artifactId>
+            <version>1.2.6</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
