--- a/scala-route/pom.xml
+++ b/scala-route/pom.xml
@@ -8,13 +8,12 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>sparkAppDependecy</artifactId>
+    <artifactId>scala-route</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.11.7</version>
+            <version>2.10.3</version>
         </dependency>
         <dependency>
             <groupId>org.specs</groupId>
@@ -36,12 +35,12 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
-            <version>2.7.1</version>
+            <version>2.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
-            <version>2.7.1</version>
+            <version>2.5.0</version>
         </dependency>
 
         <dependency>
@@ -64,33 +63,33 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_2.10</artifactId>
-            <version>1.5.2</version>
+            <version>1.5.1</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-mllib_2.10</artifactId>
-            <version>1.5.2</version>
+            <version>1.5.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.databricks</groupId>
-            <artifactId>spark-avro_2.10</artifactId>
-            <version>2.0.1</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.databricks</groupId>-->
+            <!--<artifactId>spark-avro_2.10</artifactId>-->
+            <!--<version>1.5.1</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_2.10</artifactId>
-            <version>1.5.2</version>
+            <version>1.5.1</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.10.2</version>
+            <version>2.10.3</version>
             <scope>provided</scope>
         </dependency>
 
     </dependencies>
-
+    
 </project>
