--- a/scala-route/pom.xml
+++ b/scala-route/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>scala-route</artifactId>
+    <artifactId>spark-demo1</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
