--- a/hadoop1/pom.xml
+++ b/hadoop1/pom.xml
@@ -20,7 +20,7 @@
             <artifactId>jdk.tools</artifactId>
             <version>1.6</version>
             <scope>system</scope>
-            <systemPath>C:/softwareDir/Java/jdk1.8.0_121/lib/tools.jar</systemPath>
+            <systemPath>C:/Program Files/Java/jdk1.7.0_80/lib/tools.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
