--- a/sparkproject/src/main/resources/my.properties
+++ b/sparkproject/src/main/resources/my.properties
@@ -1,6 +1,7 @@
-testkey1=testKey1
-testkey2=testkey2
-dirverClass=com.mysql.jdbc.Driver
-username=root
-password=yangyang
-dburl=jdbc:mysql://192.168.1.100:3306/spark-project?createDatabaseIfNotExist=true
+testkey1.key = testKey1
+testkey2.key testkey2
+dirverClass.dirver = com.mysql.jdbc.Driver
+username.name = root
+password.pwd = yangyang
+dburl.url = jdbc:mysql://192.168.1.100:3306/spark-project?createDatabaseIfNotExist=true
+spark.local=true
