--- a/sparkproject/src/main/resources/my.properties
+++ b/sparkproject/src/main/resources/my.properties
@@ -5,3 +5,6 @@ username.name = root
 password.pwd = yangyang
 dburl.url = jdbc:mysql://192.168.1.100:3306/spark-project?createDatabaseIfNotExist=true
 spark.local=true
+spark.local.taskid.session=1
+spark.local.taskid.page=2
+spark.local.taskid.product=3
