--- a/sparkdependecy/pom.xml
+++ b/sparkdependecy/pom.xml
@@ -121,6 +121,11 @@
             <artifactId>spark-streaming-kafka-0-8_2.11</artifactId>
             <version>${spark.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId> spark-streaming-flume_2.11</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
